# Finaly_project

./: .gitignore  CMakeLists.txt  README.md
SearchEngine/: CMakeLists.txt  README.md
SearchEngine/includes/: Document.h  indexer.h  main.h  request_handler.h
SearchEngine/src/: CMakeLists.txt  Document.cpp  indexer.cpp  main.cpp  request_handler.cpp
SearchEngine/tests/: CMakeLists.txt  Mytest.cpp
